RESOLVED FIXED121351
CTTE: RenderSVGBlock renderers are never anonymous.
https://bugs.webkit.org/show_bug.cgi?id=121351
Summary CTTE: RenderSVGBlock renderers are never anonymous.
Andreas Kling
Reported 2013-09-14 00:39:25 PDT
CTTE: RenderSVGBlock renderers are never anonymous.
Attachments
Patch (7.86 KB, patch)
2013-09-14 00:39 PDT, Andreas Kling
koivisto: review+
Andreas Kling
Comment 1 2013-09-14 00:39:53 PDT
Andreas Kling
Comment 2 2013-09-14 00:45:49 PDT
Note You need to log in before you can comment on or make changes to this bug.