CTTE: RenderSVGBlock renderers are never anonymous. <https://webkit.org/b/121351>

Reviewed by Antti Koivisto.

RenderSVGBlock inherits from RenderBlockFlow, so needs separate treatment
from RenderSVGModelObject.

But like RSMO, these renderers are never anonymous, so add strongly typed
reference getters and do away with some magical type casts.

Canonical link: https://commits.webkit.org/139313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155756 268f45cc-cd09-0410-ab3c-d52691b4dbfc