Source/WebCore/rendering/svg/RenderSVGText.h
@@ -60,7 +60,7 @@ public:
     void subtreeTextDidChange(RenderSVGInlineText*);
 
 private:
-    void element() const WTF_DELETED_FUNCTION;
+    void graphicsElement() const WTF_DELETED_FUNCTION;
 
     virtual const char* renderName() const { return "RenderSVGText"; }
     virtual bool isSVGText() const { return true; }
